--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -13,4 +13,4 @@
 </un>
 
 <h3>This is the way to go :</h3>
-<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Link to map</a>
+<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d378.5989257107008!2d77.0680446123401!3d20.98661722057798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd71884cb2dbb7d%3A0xcd4bbd797bd0856e!2sDinoda%2C%20Maharashtra%20444101!5e0!3m2!1sen!2sin!4v1707811193464!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>">Link to map</a>
